# serializer version: 1
# name: test_run__align_tags_and_token_nlp_on_sentence[artisterna]
  list([
    tuple(
      5,
      'PRS',
      '0.999510',
    ),
    tuple(
      7,
      'PRS',
      '0.993033',
    ),
    tuple(
      9,
      'PRS',
      '0.999856',
    ),
    tuple(
      10,
      'PRS',
      '0.999867',
    ),
  ])
# ---
# name: test_run__align_tags_and_token_nlp_on_sentence[belarusen]
  list([
    tuple(
      9,
      'PRS',
      '0.999875',
    ),
    tuple(
      10,
      'PRS',
      '0.999882',
    ),
    tuple(
      14,
      'PRS',
      '0.999849',
    ),
    tuple(
      15,
      'PRS',
      '0.999834',
    ),
  ])
# ---
# name: test_run__align_tags_and_token_nlp_on_sentence[det-b\xf6rjar]
  list([
  ])
# ---
# name: test_run__align_tags_and_token_nlp_on_sentence[internet]
  list([
  ])
# ---
# name: test_run__align_tags_and_token_nlp_on_sentence[kvinnolobby]
  list([
    tuple(
      2,
      'PRS',
      '0.999883',
    ),
    tuple(
      3,
      'PRS',
      '0.999880',
    ),
    tuple(
      9,
      'ORG',
      '0.962543',
    ),
    tuple(
      10,
      'ORG',
      '0.997631',
    ),
  ])
# ---
# name: test_run__align_tags_and_token_nlp_on_sentence[street-race]
  list([
  ])
# ---
